--- a/accessibility-statement_2025-04-08.html
+++ b/accessibility-statement_2025-04-08.html
@@ -12,6 +12,7 @@
 <ul class="organizational-effort accessibility-measures">
 	<li>Assign clear accessibility goals and responsibilities.</li>
 	<li>Employ formal accessibility quality assurance methods.</li>
+	<li>We integrate accessibility into development by using semantic HTML, ARIA landmarks, keyboard navigation, skip links and responsive design to enhance assistive technology compatibility.</li>
 </ul>
 <h3>Conformance status</h3>
 <p>
@@ -37,7 +38,7 @@
 <ul class="basic-information feedback h-card">
 	<li>
 	E-mail:
-	<a class="email u-email" href="mailto:dexter199057@gmail.comdexter199057@gmail.comdexter199057@gmail.com">dexter199057@gmail.com</a>
+	<a class="email u-email" href="mailto:dexter199057@gmail.comdexter199057@gmail.comdexter199057@gmail.comdexter199057@gmail.comdexter199057@gmail.com">dexter199057@gmail.com</a>
 </li>
 </ul>
 <p>
