Add latest accessibility statement

--- a/accessibility-statement_2025-05-08.html
+++ b/accessibility-statement_2025-05-08.html
@@ -38,7 +38,7 @@
 <ul class="basic-information feedback h-card">
 	<li>
 	E-mail:
-	<a class="email u-email" href="mailto:dexter199057@gmail.comdexter199057@gmail.comdexter199057@gmail.comdexter199057@gmail.comdexter199057@gmail.com">dexter199057@gmail.com</a>
+	<a class="email u-email" href="mailto:dexter199057@gmail.comdexter199057@gmail.comdexter199057@gmail.comdexter199057@gmail.comdexter199057@gmail.comdexter199057@gmail.comdexter199057@gmail.com">dexter199057@gmail.com</a>
 </li>
 </ul>
 <p>
@@ -57,7 +57,8 @@
 	is not compatible with:
 </p>
 <ul class="technical-information incompatible-environments">
-	<li>The website uses modern CSS (Tailwind CSS) and JavaScript (ES6+), which may not render correctly in Internet Explorer 11. JAWS 2018 may struggle with dynamic content updates due to outdated ARIA support.</li>
+	<li>Internet Explorer 11 may not render the website correctly because of modern CSS (Tailwind CSS) and JavaScript (ES6+).</li>
+	<li> JAWS 2018 may struggle with dynamic content updates due to outdated ARIA support.</li>
 </ul>
 <h3>Technical specifications</h3>
 <p>
