add edit button to post detail page

--- a/public/accessibility-statement_2025-05-08.html
+++ b/public/accessibility-statement_2025-05-08.html
@@ -84,7 +84,7 @@
 	<span class="basic-information website-name">TechBlog</span>:
 </p>
 <ol class="technical-information accessibility-limitations">
-	<li><strong>Text contrast on post content</strong>: Text in red color may be not readable for users with impairments, color blindness, dyslexia or elderly because the issue is caused by a CDN-hosted stylesheet used for syntax highlighting. This stylesheet applies low-contrast colors that do not meet WCAG 2.1 AA for normal text (4.5:1 ratio). We are investigating alternative syntax highlighting themes with higher contrast ratios compatible with atom-one-dark.min.css. Our team is also exploring local overrides to adjust the stylesheet’s colors without relying on the CDN. Please enable high-contrast mode in browsers or use screen readers to access content auditorily.</li>
+	<li><strong>Text contrast on post content</strong>: Text in red color may be not readable for users with impairments, color blindness, dyslexia or elderly because the issue is caused by a CDN-hosted stylesheet used for syntax highlighting. This stylesheet applies low-contrast colors that do not meet WCAG 2.1 AA for normal text (4.5:1 ratio). We are investigating alternative syntax highlighting themes with higher contrast ratios compatible with atom-one-dark.min.css. Our team is also exploring local overrides to adjust the stylesheet's colors without relying on the CDN. Please enable high-contrast mode in browsers or use screen readers to access content auditorily.</li>
 </ol>
 <h3>Assessment approach</h3>
 <p>
